Combo box for choosing the number of vertexes added

--- a/Project/MainWindow.xaml
+++ b/Project/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="Algorytm poszukiwania wszystkich mostów w grafie" Height="450" Width="800">
+    <Grid Background="Cornsilk">
+        <Label Content="Algorytm poszukiwania wszystkich mostów w grafie - Algorytm Tarjana" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="7.47,0.664" Width="540" Height="37" FontFamily="Calibri" FontSize="18" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Content="Wybierz liczbę wierzchołków" HorizontalAlignment="Left" Margin="200,55,0,0" VerticalAlignment="Top" Width="200" Height="34" FontFamily="Calibri" FontSize="16"/>
+        <ComboBox x:Name="numberOfVerticesBox" HorizontalAlignment="Left" Margin="405,55,0,0" VerticalAlignment="Top" Width="136" Height="28" FontFamily="Calibri" FontSize="16" SelectionChanged="NumberOfVerticesBox_SelectionChanged"/>
+        <Label x:Name="adjacencyListLabel" Content="Uzupełnij listę sąsiedztwa:" HorizontalAlignment="Left" Margin="130,85,0,0" VerticalAlignment="Top" Width="180" Height="34" FontFamily="Calibri" FontSize="16" Visibility="Hidden"/>
     </Grid>
 </Window>
