--- a/Project/MainWindow.xaml
+++ b/Project/MainWindow.xaml
@@ -6,10 +6,11 @@
         xmlns:local="clr-namespace:Project"
         mc:Ignorable="d"
         Title="Algorytm poszukiwania wszystkich mostów w grafie" Height="450" Width="800">
-    <Grid Background="Cornsilk">
+    <Grid x:Name="grid" Background="Cornsilk">
         <Label Content="Algorytm poszukiwania wszystkich mostów w grafie - Algorytm Tarjana" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="7.47,0.664" Width="540" Height="37" FontFamily="Calibri" FontSize="18" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <Label Content="Wybierz liczbę wierzchołków" HorizontalAlignment="Left" Margin="200,55,0,0" VerticalAlignment="Top" Width="200" Height="34" FontFamily="Calibri" FontSize="16"/>
         <ComboBox x:Name="numberOfVerticesBox" HorizontalAlignment="Left" Margin="405,55,0,0" VerticalAlignment="Top" Width="136" Height="28" FontFamily="Calibri" FontSize="16" SelectionChanged="NumberOfVerticesBox_SelectionChanged"/>
-        <Label x:Name="adjacencyListLabel" Content="Uzupełnij listę sąsiedztwa:" HorizontalAlignment="Left" Margin="130,85,0,0" VerticalAlignment="Top" Width="180" Height="34" FontFamily="Calibri" FontSize="16" Visibility="Hidden"/>
+        <Label x:Name="adjacencyListLabel" Content="Uzupełnij listę sąsiedztwa:" HorizontalAlignment="Left" Margin="130,85,0,0" VerticalAlignment="Top" Width="180" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible"/>
+        <Label x:Name="verticesBox" Content="Wierzchołki grafu" HorizontalAlignment="Left" Margin="80,115,0,0" VerticalAlignment="Top" Width="122" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible"/>
     </Grid>
 </Window>
