--- a/Project/MainWindow.xaml
+++ b/Project/MainWindow.xaml
@@ -12,5 +12,7 @@
         <ComboBox x:Name="numberOfVerticesBox" HorizontalAlignment="Left" Margin="405,55,0,0" VerticalAlignment="Top" Width="136" Height="28" FontFamily="Calibri" FontSize="16" SelectionChanged="NumberOfVerticesBox_SelectionChanged"/>
         <Label x:Name="adjacencyListLabel" Content="Uzupełnij listę sąsiedztwa:" HorizontalAlignment="Left" Margin="130,85,0,0" VerticalAlignment="Top" Width="180" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible"/>
         <Label x:Name="verticesBox" Content="Wierzchołki grafu" HorizontalAlignment="Left" Margin="80,115,0,0" VerticalAlignment="Top" Width="122" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible"/>
+        <Label x:Name="neighborsBox" Content="Wpisz sąsiadów wierzchołka w formacie:" HorizontalAlignment="Left" Margin="240,115,0,0" VerticalAlignment="Top" Width="275" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible"/>
+        <Label x:Name="exampleFormatBox" Content="1, 2, 3, 4, 18, 22" HorizontalAlignment="Left" Margin="510,115,0,0" VerticalAlignment="Top" Width="119" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible" Background="#FBFFFFFF" BorderBrush="Black" BorderThickness="2,2,2,2" RenderTransformOrigin="0.452,0.555"/>
     </Grid>
 </Window>
