--- a/Project/MainWindow.xaml
+++ b/Project/MainWindow.xaml
@@ -14,5 +14,6 @@
         <Label x:Name="verticesBox" Content="Wierzchołki grafu" HorizontalAlignment="Left" Margin="80,115,0,0" VerticalAlignment="Top" Width="122" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible"/>
         <Label x:Name="neighborsBox" Content="Wpisz sąsiadów wierzchołka w formacie:" HorizontalAlignment="Left" Margin="240,115,0,0" VerticalAlignment="Top" Width="275" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible"/>
         <Label x:Name="exampleFormatBox" Content="1, 2, 3, 4, 18, 22" HorizontalAlignment="Left" Margin="510,115,0,0" VerticalAlignment="Top" Width="119" Height="35" FontFamily="Calibri" FontSize="16" Visibility="Visible" Background="#FBFFFFFF" BorderBrush="Black" BorderThickness="2,2,2,2" RenderTransformOrigin="0.452,0.555"/>
+        <Grid x:Name="adjacencyListGrid" Margin="5,155,0,5"/>
     </Grid>
 </Window>
